--- a/5-1-2025/task1.html
+++ b/5-1-2025/task1.html
@@ -140,7 +140,7 @@
             if (document.getElementById('javascript').checked) languages.push('JavaScript');
 
             const outputDiv = document.getElementById('output');
-            outputDiv.innerHTML = ''; // Clear previous output
+            outputDiv.innerHTML = '';
 
             if (image) {
                 const imgElement = document.createElement('img');
